--- a/index.html
+++ b/index.html
@@ -156,7 +156,26 @@
         </div>
     </section>
     
-    <section id="contact">
+    <section id="contact"> <section id="feedback" style="padding:40px 20px; background:#f7f7f7;">
+  <h2 style="text-align:center; font-size:32px; margin-bottom:20px; color:#4a2c19; font-weight:bold;">
+    Customer Feedback
+  </h2>
+  <p style="text-align:center; margin-bottom:30px; font-size:18px;">
+    Please share your experience with Ram Maurya Interior
+  </p>
+
+  <div style="max-width:900px; margin:auto;">
+    <div style="position:relative; width:100%; height:0; padding-bottom:120%; overflow:hidden;">
+      <iframe 
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeCEUDCxGaNdcsGmcIQ-TmpZKpWo9BuWqGSBpFndCp42H3Iqw/viewform?embedded=true" 
+        frameborder="0" 
+        marginheight="0" 
+        marginwidth="0"
+        style="position:absolute; top:0; left:0; width:100%; height:100%; border:none;">
+      </iframe>
+    </div>
+  </div>
+</section>
         <h2>Contact Us</h2>
         <p>Get in touch for custom orders or inquiries. Call us at <strong>9696164429</strong> or visit our workshop at Walhekarwadi near London Bridge, Ravet, Pin Code 411033.</p>
         <form>
